# Granthiq

./: .gitignore  LOCAL_SETUP.md  README.md  vercel.json
backend/: .dockerignore  .gitignore  .gitleaksignore  Dockerfile  Dockerfile.fast  README.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.txt  requirements-docker.txt  requirements.txt
backend/.github/workflows/: ci.yml  codeql.yml  deploy.yml
backend/data/uploads/: README.md
backend/docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  MODELS.md  PLAN-google-tts-migration.md  README.md  ROUTERS.md  SERVICES.md  SETUP.md  SUPABASE_EMAIL_TEMPLATES.md  SUPABASE_USER_SYNC_SETUP.md  TECHNICAL_CHALLENGES_AND_SOLUTIONS.md  TROUBLESHOOTING.md
backend/migrations/: enable_rls.sql  env.py  fix_user_sync_trigger.sql  supabase_user_sync_trigger.sql
backend/migrations/versions/: 06998810b3f7_add_updated_at_to_document_and_content.py  09c618e11b5a_add_task_progress_table.py  2f3e4d5c6a7b_reset_and_add_chatrole.py  35ef69abb06a_add_document_preview_column.py  51fe27a12919_add_note_created_type.py  5bafb849dbfe_task_added.py  8e2ad4f1f629_make_user_hashed_password_optional_for_.py  a2a85802eeb3_initial_migration.py  a6d3f48d241d_chat_message_model_fix.py  abcdef123456_add_google_oauth_token.py  b2c7d4e5f6a1_fix_task_progress_fks.py  be7e73646e07_feedback_table.py  c7d1e2f3a4b5_add_confidence_to_chatmessage.py  f4c39a8a76d0_fixed_timezone.py
backend/scripts/: analyze_dependencies.py  cleanup_fiqa_data.py  deep_diagnostic_fiqa.py  diagnose_qdrant.py  diagnose_retrieval.py  diagnose_retrieval_production.py  download_models.py  e2e_queue_test.py  evaluate_production_hyde.py  fix_alembic_version.py  fix_db_complete.py  force_kill_db_locks.py  generate_token.py  investigate_zero_score_queries.py  quick_wins.sh  setup_db.py  test_auth_validation.py  test_import.py  test_imports.py  test_queue_e2e.py  test_queue_production_flow.py  test_real_queue_flow.py  test_storage_upload.py  trace-623f80b01777e56ee9ee5d5fba11c8ad.json  validate_env.py  validate_requirements.py
backend/src/: app.py  config.py  constants.py  dependencies.py  rag.py
backend/src/db/: __init__.py  models.py  session.py  vector_store.py
backend/src/di/: __init__.py  container.py
backend/src/evaluation/: comparison_report.py  eval_runner.py  ragas_evaluator.py  report_generator.py  run_evaluation.py  run_fiqa_evaluation.py  test_dataset.py
backend/src/middleware/: __init__.py  correlation.py
backend/src/routers/: auth.py  chat.py  documents.py  feedback.py  gdrive.py  generation.py  health.py  notebooks.py  notes.py  router.py  settings.py  sources.py  tasks.py
backend/src/schemas/: __init__.py  chat.py  content.py  document.py  error.py  feedback.py  pagination.py  rag_config.py
backend/src/services/: document_health.py  email_service.py  storage.py
backend/src/utils/: cache.py  circuit_breaker.py  encryption.py  error_handling.py  errors.py  exceptions.py  file_utils.py  filter.py  json_cleaning.py  logger.py  output_parsers.py  query_utils.py  rag_config.py  request_dedup.py  retry.py  sanitization.py  security.py  url_validator.py  vector_store_utils.py
backend/tests/: conftest.py  test_memory_audio_generator.py
backend/tests/evaluation/: benchmark_rag_config.py
backend/tests/fixtures/: __init__.py  factories.py  mocks.py  test_data.py
backend/tests/integration/: test_auth.py  test_chat.py  test_health.py  (+6 more)
(+268 files in other folders)
