[project]
name = "granthiq-backend"
version = "0.1.0"
description = "Granthiq - RAG-powered document intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "aiohttp==3.13.2",
 "aiosignal==1.4.0",
 "aiosqlite>=0.22.1",
 "alembic>=1.17.2",
 "appdirs==1.4.4",
 "assemblyai==0.44.3",
 "asyncpg>=0.31.0",
 "attrs==25.4.0",
 "brotli==1.1.0",
 "chardet==5.2.0",
 "datasets==4.4.1",
 "deepeval>=3.4.6",
 "dill==0.4.0",
 "dirtyjson==1.0.8",
 "edge-tts>=7.2.7",
 "elevenlabs==1.11.0",
 "eval-type-backport==0.2.2",
 "fastapi==0.115.0",
 "fastembed>=0.4.2",
 "firecrawl>=4.5.0",
 "frozenlist==1.8.0",
 "google-api-python-client>=2.189.0",
 "google-auth>=2.45.0",
 "google-auth-httplib2>=0.3.0",
 "google-auth-oauthlib>=1.2.2",
 "google-cloud-texttospeech>=2.34.0",
 "greenlet==3.3.0",
 "grpcio-tools==1.76.0",
 "h2==4.3.0",
 "hpack==4.1.0",
 "httptools==0.7.1",
 "hyperframe==6.1.0",
 "iniconfig==2.3.0",
 "jsonpath-python==1.0.6",
 "google-cloud-texttospeech>=2.34.0",
 "langchain-core>=1.1.0",
 "langchain-google-genai>=3.2.0",
 "langchain-groq>=1.1.0",
 "langchain-huggingface>=1.2.0",
 "langchain-litellm>=0.3.5",
 "langchain-openai>=1.1.0",
 "langfuse>=3.10.5",
 "litellm>=1.80.5",
 "llama-index==0.14.9",
 "llama-index-cli==0.5.3",
 "llama-index-core==0.14.9",
 "llama-index-embeddings-huggingface>=0.1.0",
 "llama-index-embeddings-openai==0.5.1",
 "llama-index-indices-managed-llama-cloud==0.9.4",
 "llama-index-legacy==0.9.48.post4",
 "llama-index-llms-groq>=0.1.4",
 "llama-index-llms-litellm>=0.6.3",
 "llama-index-llms-openai>=0.6.0,<0.7",
 "llama-index-postprocessor-cohere-rerank>=0.5.1",
 # llama-index-postprocessor-sentencetransformer-rerank removed - using Cohere only for better performance
 "llama-index-readers-file==0.5.5",
 "llama-index-readers-llama-parse==0.5.1",
 "llama-index-retrievers-bm25>=0.2.2",
 "llama-index-vector-stores-qdrant>=0.5.0",
 "llama-parse==0.6.54",
 "llamaindex-py-client==0.1.19",
 "loguru>=0.7.3",
 "multidict==6.7.0",
 "multiprocess==0.70.18",
 "mutagen==1.47.0",
 "nest-asyncio==1.6.0",
 "openinference-instrumentation-llama-index>=4.3.9",
 "pluggy==1.6.0",
 "portalocker==2.10.1",
 "procrastinate[postgresql,psycopg]>=3.6.0",
 "propcache==0.4.1",
 "psycopg2-binary>=2.9.11",
 "pyarrow==22.0.0",
 "pycryptodomex==3.23.0",
 "pydantic-settings==2.12.0",
 "pydub==0.25.1",
 "pysbd==0.3.4",
 "pytest==8.3.2",
 "pytest-asyncio==0.23.7",
 "python-dotenv==1.2.1",
 "python-magic-bin>=0.4.14; sys_platform == 'win32' or (sys_platform == 'darwin' and platform_machine == 'x86_64')",
 "python-magic>=0.4.27; sys_platform == 'darwin' and platform_machine == 'arm64'",
 "pywin32==311; sys_platform == 'win32'",
 "qdrant-client==1.12.0",
 "ragas==0.4.0",
 "scikit-learn==1.7.2",
 "sentence-transformers>=3.3.1",
 "sentry-sdk>=2.48.0",
 "slowapi>=0.1.9",
 "soundfile==0.12.1",
 "sqlalchemy==2.0.44",
 "sqlmodel>=0.0.31",
 "starlette==0.38.6",
 "streamlit>=1.50.0",
 "striprtf==0.0.26",
 "supabase>=2.27.0",
 "tabulate==0.9.0",
 "tenacity>=8.2.0,<9.0.0",
 "threadpoolctl==3.6.0",
 "torch>=2.3.0",
 "transformers>=4.42.0",
 "unstructured[all-docs]>=0.18.15",
 "uvicorn==0.32.0",
 "watchfiles==1.1.1",
 "websockets==15.0.1",
 "xxhash==3.6.0",
 "yarl==1.22.0",
 "youtube-transcript-api==0.6.2",
 "yt-dlp>=2024.11.04",
]

[tool.vercel]
entrypoint = "src.app:app"

[tool.vercel.scripts]
build = "echo 'Granthiq backend ready'"
